hphp/test/zend/good/ext/spl/tests/SplDoublyLinkedList_getIteratorMode.php
<?php
$list = new SplDoublyLinkedList();
$list->setIteratorMode(SplDoublyLinkedList::IT_MODE_FIFO | SplDoublyLinkedList::IT_MODE_KEEP);
echo $list->getIteratorMode();
?>