hphp/test/zend/bad/ext-spl/SplDoublyLinkedList_count.php
<?php
$list = new SplDoublyLinkedList();

$c = $list->count('foo');
?>